# fastapi_apps

./: .pdm-python  LICENSE  README.md  main.py  pyproject.toml
static/: index.html  maps.html  tracks.kml
static/js/: maps.js
