[project]
name = "fastapi_apps"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Shawn Tsai", email = "sstsai@gmail.com"},
]
dependencies = [
    "fastapi[standard]>=0.113.0",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
